fix empty state z-index

--- a/Files/src/css/component/shelf/empty-state.component.scss
+++ b/Files/src/css/component/shelf/empty-state.component.scss
@@ -13,7 +13,7 @@
 	pointer-events: none;
 	opacity: 0;
 	transition: 0.15s;
-	z-index: 99;
+	z-index: 98;
 }
 
 .modal-empty-state.active {
@@ -37,15 +37,18 @@
 	margin-top: 5px;
 }
 
-* + .empty-state-h1 {
-	margin-top: 18px;
-}
+.modal-empty-state {
+	* + .empty-state-h1 {
+		// margin-top: 18px;
+		// margin-top: 30px;
+	}
 
-.btn {
-	min-width: 200px;
-	margin-top: 40px;
+	.btn {
+		min-width: 200px;
+		margin-top: 40px;
 
-	+ * {
-		margin-top: 10px;
+		+ * {
+			margin-top: 10px;
+		}
 	}
 }
